--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-avatar": "^3.10.0",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
+    "react-redux": "5.0.7",
     "react-rounded-image": "^2.0.13",
     "react-router-dom": "4.2.2",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
+    "redux": "3.7.2",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
   },
