--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
     "react-redux": "5.0.7",
+    "react-redux-form": "1.16.8",
     "react-rounded-image": "^2.0.13",
     "react-router-dom": "4.2.2",
     "react-scripts": "4.0.3",
