--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "4.0.0",
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-avatar": "^3.10.0",
     "react-dom": "^17.0.2",
-    "react-popper": "^2.2.5",
+    "react-popper": "0.9.2",
     "react-redux": "5.0.7",
     "react-redux-form": "1.16.8",
     "react-rounded-image": "^2.0.13",
     "react-router-dom": "4.2.2",
     "react-scripts": "4.0.3",
-    "reactstrap": "^8.10.0",
+    "reactstrap": "5.0.0",
     "redux": "3.7.2",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
